# DEMON

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
DEMON_AI/: __init__.py
DEMON_AI/Category_test/: TEST.py
DEMON_AI/_common/: utils.py
DEMON_AI/_common/logging/: logger_config.py
DEMON_AI/_common/schemas/: voice_schemas.py
