[project]  
name = "demon-ai"  
version = "0.1.0"  
description = "DEMON AI - Category 1: Advanced Voice Synthesis System"  
requires-python = ">=3.8"  
license = {text = "Proprietary"}  

[build-system]  
requires = ["setuptools>=65.5.1", "wheel"]  
build-backend = "setuptools.build_meta"  

[tool.setuptools.packages.find]  
include = ["DEMON_AI*"]  